# Projectmanager

portfolioapp/: README.md
portfolioapp/portfolioapp/: index.html
portfolioapp/portfolioapp/src/: App.jsx
portfolioapp/portfolioapp/src/components/: ProjectCard.jsx  SearchBar.jsx
projectmanager/: README.md  pyproject.toml  requirements.txt
projectmanager/.github/workflows/: ci.yml
projectmanager/data/: sample_project_data.json
projectmanager/src/projectmanager/: __init__.py  cli.py  models.py  storage.py
projectmanager/tests/: test_projectmanager.py
