[project]
name = "projectmanager"
version = "0.1.0"
description = "A Python CLI app for managing users, projects, and tasks with local persistence."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "rich>=13.0",
  "python-dateutil>=2.9"
]
[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
[project.scripts]
projectmanager = "projectmanager.cli:main"

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"
